Bugfix: nzbs.org auto-categorization didn't work on homepage (Browse All NZBs)
Bugfix: NZBXXX.com 1-click NZB download was not working; added Username & API Key options in the extension options to fix. http://code.google.com/p/sabconnectplusplus/issues/detail?id=12

Version 0.4.7
-------------
Improvement: Auto-categorization for nzbs.org. Categories are named "Console.XBox360", "TV.x264", etc. and need to match a category NAME you have defined in SABnzbd. See http://code.google.com/p/sabconnectplusplus/wiki/Categories#nzbs.org for details.

Version 0.4.6
-------------
Bugfix: 0.4.5 broke 1-click NZB download buttons on nzbs.org, in list view
Bugfix: 1-click NZB download button on nzbs.org details page looked weird after click

Version 0.4.5
-------------
Bugfix: bandwidth graph wasn't working; thanks to Sajid Anwar for the fix.
New feature: Added 1-click NZB download for nzbindex.nl
Improvement: Added 'Send selected to SABnzbd' buttons on nzbs.org, to send multiple NZBs to SAB in one click.
Improvement: Preload graph image in the background to remove flickering.
Improvement: Added manual refresh menu item.
Improvement: Allow user to change refresh rate.
Improvement: Number of developers working on SABconnect++ increased! Welcome Sajid Anwar!

Version 0.4.4
-------------
New feature: Added 1-click NZB download for NZBsRus.com

Version 0.4.3
-------------
Bugfix: newzbin.com "Send to SABnzbd" button was broken.
New feature: Added 1-click NZB download for newzleech.com; thanks to johannespfau for the patch.
New feature: Added 1-click NZB download to nzbs.org details page.
Improvement: nzbs.org: Made it clearer that the SAB 1-click icon and the download link are distinct.
Improvement: Removed badge text (# queued items) instead of displaying '0'.

Version 0.4.2
-------------
New feature: double-click the toolbar icon to open SABnzbd.
  Note: Chrome doesn't support this natively.